Added missing comments in index.html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ body {
   to {opacity:1 ;}
 }
 
+/* Formatting for the hoverbox */
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
@@ -89,6 +90,7 @@ body {
   z-index: 1;
 }
 
+/* Shows the hoverbox */
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
