--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ body {
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: black;
-  color: #fff;
+  background-color: rgb(201, 154, 100);
+  color: black;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
@@ -93,6 +93,8 @@ body {
 /* Shows the hoverbox */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+  -webkit-animation: fadeIn 0.5s;
+  animation: fadeIn 0.5s
 }
 
     </style>
