Added prototype.js and hover animation for tasks

--- a/prototyp/prototyp.html
+++ b/prototyp/prototyp.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototyp</title>
     <link rel="stylesheet" href="prototyp.css">
+    <link rel="text/javascript" src="prototyp.js">
 </head>
+
 <body>
     <h1>Kanban Board Team Banane</h1>
 
