--- a/prototyp/home.html
+++ b/prototyp/home.html
@@ -79,10 +79,14 @@
 
     <section id="team">
       <h3>Our Team</h3>
+      <hr>
       <ul>
         <li><a href=https://www.instagram.com/janpiiiee/ ><img src="img/albrecht.PNG" alt="Albrecht"></a></li><br><br>
+        <h2>Jan Albrecht, W&W Informatik GmbH</h2><br><br>
         <li><a href= https://www.instagram.com/simon.froehner/ ><img src="img/froehner.PNG" alt="Froehner"></a></li><br><br>
+        <h2>Simon Fröhner, Finanz Informatik Solutions Plus GmbH</h2><br><br>
         <li><a href=https://www.instagram.com/tabascoel/ ><img src="img/tabyrca.PNG" alt="Tabyrca"></a></li>
+        <h2>Ion Tabyrca, Sopra Banking Software GmbH</h2><br><br>
       </ul>
       <hr>
 
