Added descriptions for tasks

--- a/prototyp/kanban.html
+++ b/prototyp/kanban.html
@@ -48,7 +48,10 @@
             <li class="task-card">Aufgabe 1</li>
             <li class="task-card">Aufgabe 2</li>
             <li class="task-card">Aufgabe 3</li>
-            <li class="task-card">Aufgabe mit einem längeren Text zum Testen!</li>
+            <li class="task-card">
+                <span>Aufgabe mit Beschreibung</span>
+                <p class="task-description">Hier steht die Beschreibung für die Aufgabe</p>
+            </li>
             <li class="task-card">Aufgabe 5</li>
             <li class="task-card"><input class="new-task-card" type="text" placeholder="Create a new task.."></li>
         </ul>
