--- a/kanban.html
+++ b/kanban.html
@@ -24,7 +24,7 @@
       
         <nav id="main-nav">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a class="dropdown">
                     <span>Your projects</span>
                         <div class="dropdown-content">
