Added dragdrop to kanban.html and folder structure

--- a/html/prototyp.html
+++ b/html/prototyp.html
@@ -8,8 +8,7 @@
     <!-- CSS only from bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="prototyp.css">
-    <link rel="text/javascript" src="prototyp.js">
+    <link rel="stylesheet" href="css/prototyp.css">
 </head>
 
 <body>
