--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Banane | Kanban amk</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="design.css">
+    <link rel="stylesheet" type="text/css" href="html/css/design.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   </head>
