Minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <input class="input_text" type="text" tabindex="1" placeholder="username"><br>            
               <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
               <input class="button" type="submit" ><br>
-              <a href=kanban.html>
+              <a href="html/kanban.html">
                 <img src="img/pfeil.png" alt="Pfeil">
               </a>
           </form>
