Erstellen der login.js und Referenzierung in index.html

--- a/index.html
+++ b/index.html
@@ -113,5 +113,8 @@
         &copy; 2020 DHBW Stuttgart 
       </p>
     </footer>
+    <!----- Adding the necessary scripts ----->
+    <script src="js/login.js"></script>
   </body>
+  
 </html>
