Made everything in english

--- a/html/kanban.html
+++ b/html/kanban.html
@@ -55,7 +55,7 @@
             <button class="edit" onclick="openEditNewTask()">
                 <img src="../img/pencil-square.svg">
             </button>   
-            <p class="task-description">Hier steht die Beschreibung für die Aufgabe</p> 
+            <p class="task-description">This is the desription for the task</p> 
         </div>
     </div>
     <div class="column dropzone">
@@ -71,12 +71,24 @@
             <button class="edit" onclick="openEditNewTask()">
                 <img src="../img/pencil-square.svg">
             </button>   
-            <p class="task-description">Hier steht die Beschreibung für die Aufgabe</p> 
+            <p class="task-description">Whoever reads this is dumb!</p> 
         </div>
     </div>
     <div class="column dropzone">
         <h2>Column 3</h2>
         <div class="new-card"><button class="new-card-button" onclick="openCreateNewTask()"></button></div>
+        <div class="card">
+            <div class ="handle" draggable="true"></div>
+            <div class="content">
+                <h5>Another task for testing</h5>
+                <p>Jan</p>
+                <p>30.09.2020</p>
+            </div>
+            <button class="edit" onclick="openEditNewTask()">
+                <img src="../img/pencil-square.svg">
+            </button>   
+            <p class="task-description">You just got trolled</p> 
+        </div>
     </div>
     <div class="column new-column">
         <h2><input class="new-column-input" type="text" placeholder="New task column"></h2>
