--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Banane | Kanban amk</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="html/css/design.css">
+    <link rel="stylesheet" type="text/css" href="css/design.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   </head>
@@ -51,7 +51,7 @@
             <input class="input_text" type="text" tabindex="1" placeholder="username"><br>            
             <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
             <input class="button" type="submit" ><br>
-            <a href=#registration>
+            <a href=kanban.html>
                 <img src="img/pfeil.png" alt="Pfeil">
               </a>
         </form>
@@ -68,7 +68,7 @@
               <input class="input_text" type="text" tabindex="1" placeholder="username"><br>            
               <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
               <input class="button" type="submit" ><br>
-              <a href="html/kanban.html">
+              <a href="#login">
                 <img src="img/pfeil.png" alt="Pfeil">
               </a>
           </form>
