--- a/html/kanban.html
+++ b/html/kanban.html
@@ -24,7 +24,7 @@
       
         <nav id="main-nav">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a class="dropdown">
                     <span>Your projects</span>
                         <div class="dropdown-content">
@@ -34,7 +34,7 @@
                         </div>
                     </a>
                 </li>
-                <li><a href="../index.html">Logout</a></li>
+                <li><a href="index.html">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
                 <p>01.10.2020</p>
             </div>
             <button class="edit" onclick="openEditNewTask()">
-                <img src="../img/pencil-square.svg">
+                <img src="img/pencil-square.svg">
             </button>   
             <p class="task-description">This is the desription for the task</p> 
         </div>
@@ -69,7 +69,7 @@
                 <p>22.09.2020</p>
             </div>
             <button class="edit" onclick="openEditNewTask()">
-                <img src="../img/pencil-square.svg">
+                <img src="img/pencil-square.svg">
             </button>   
             <p class="task-description">Whoever reads this is dumb!</p> 
         </div>
@@ -85,7 +85,7 @@
                 <p>30.09.2020</p>
             </div>
             <button class="edit" onclick="openEditNewTask()">
-                <img src="../img/pencil-square.svg">
+                <img src="img/pencil-square.svg">
             </button>   
             <p class="task-description">You just got trolled</p> 
         </div>
