--- a/html/index.html
+++ b/html/index.html
@@ -65,9 +65,9 @@
         <hr>
         <form >
   
-              <input class="input_text" type="text" tabindex="1" placeholder="Benutzername"><br>
-              <input class="input_text" type="password" tabindex="2" placeholder="Passwort"><br>
-              <input class="input_text" type="password" tabindex="3" placeholder="Passwort wiederholen"><br>
+              <input class="input_text" type="text" tabindex="1" placeholder="username"><br>
+              <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
+              <input class="input_text" type="password" tabindex="3" placeholder="repeat password"><br>
               <input class="button" type="submit" ><br>
               <a href="#login">
                 <img src="img/pfeil.png" alt="Pfeil">
