--- a/html/index.html
+++ b/html/index.html
@@ -100,9 +100,9 @@
       <hr>
 
       <form>
-        <input class="input_text" type="email" tabindex="1" placeholder="E-Mail"><br>
-        <input class="input_text" type="text" tabindex="2" placeholder="Betreff"><br>
-        <textarea class="input_text" tabindex="3" placeholder="Nachricht"></textarea><br>
+        <input class="input_text" type="email" tabindex="1" placeholder="e-mail"><br>
+        <input class="input_text" type="text" tabindex="2" placeholder="subject"><br>
+        <textarea class="input_text" tabindex="3" placeholder="message"></textarea><br>
         <input class="button" type="submit" >
       </form>
     </section>
