--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 
             <input class="input_text" type="text" tabindex="1" placeholder="Benutzername"><br>
             <input class="input_text" type="password" tabindex="2" placeholder="Passwort"><br>
-            <input class="button" type="submit" ><br>
+            <input class="button" type="submit" tabindex="3"><br>
             <a href=kanban.html>
                 <img src="img/pfeil.png" alt="Pfeil">
               </a>
@@ -65,10 +65,10 @@
         <hr>
         <form >
   
-              <input class="input_text" type="text" tabindex="1" placeholder="username"><br>
-              <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
-              <input class="input_text" type="password" tabindex="3" placeholder="repeat password"><br>
-              <input class="button" type="submit" ><br>
+              <input class="input_text" type="text" tabindex="4" placeholder="username"><br>
+              <input class="input_text" type="password" tabindex="5" placeholder="password"><br>
+              <input class="input_text" type="password" tabindex="6" placeholder="repeat password"><br>
+              <input class="button" type="submit" tabindex="7"><br>
               <a href="#login">
                 <img src="img/pfeil.png" alt="Pfeil">
               </a>
@@ -100,10 +100,10 @@
       <hr>
 
       <form>
-        <input class="input_text" type="email" tabindex="1" placeholder="e-mail"><br>
-        <input class="input_text" type="text" tabindex="2" placeholder="subject"><br>
-        <textarea class="input_text" tabindex="3" placeholder="message"></textarea><br>
-        <input class="button" type="submit" >
+        <input class="input_text" type="email" tabindex="8" placeholder="e-mail"><br>
+        <input class="input_text" type="text" tabindex="9" placeholder="subject"><br>
+        <textarea class="input_text" tabindex="10" placeholder="message"></textarea><br>
+        <input class="button" type="submit" tabindex="11">
       </form>
     </section>
 
