Trying to get registration to work

--- a/html/kanban.html
+++ b/html/kanban.html
@@ -6,8 +6,8 @@
     <title>Banane | KanbanBoard</title>
 
 
-    <link rel="stylesheet" type="text/css" href="css/design.css">
-    <link rel="stylesheet" type="text/css" href="css/kanbandesign.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/kanban.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
@@ -165,6 +165,6 @@
 </div>
 
 <!----- Adding the necessary scripts ----->
-<script src="js/taskcard.js"></script>
+<script src="js/kanban.js"></script>
 </body>
 </html>
