get for register

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
 <section id="login">
     <h3>Login</h3>
     <hr>
-    <form>
+    <form id="loginForm">
 
         <input class="input_text" type="text" tabindex="1" placeholder="Benutzername"><br>
         <input class="input_text" type="password" tabindex="2" placeholder="Passwort"><br>
