--- a/html/index.html
+++ b/html/index.html
@@ -48,8 +48,8 @@
     <hr>
     <form id="loginForm">
 
-        <input class="input_text" type="text" tabindex="1" placeholder="Benutzername"><br>
-        <input class="input_text" type="password" tabindex="2" placeholder="Passwort"><br>
+        <input class="input_text" name="username" type="text" tabindex="1" placeholder="Benutzername"><br>
+        <input class="input_text" name="password" type="password" tabindex="2" placeholder="Passwort"><br>
         <input class="button" type="submit" tabindex="3"><br>
         <a href=kanban.html>
             <img src="img/pfeil.png" alt="Pfeil">
