--- a/html/kanban.html
+++ b/html/kanban.html
@@ -43,61 +43,23 @@
     <!-- KANBAN-COLUMNS -------------------------->
 
     <div class="column dropzone" id="to-do">
-        <h2>Column 1</h2>
+        <h2>TO-DO</h2>
         <div class="new-card">
             <button class="new-card-button" onclick="openCreateNewTask()"></button>
         </div>
-        <div class="card">
-            <div class="handle" draggable="true"></div>
-            <div class="content">
-                <h5>Task 1</h5>
-                <p>Ion</p>
-                <p>01.10.2020</p>
-            </div>
-            <button class="edit" onclick="openEditNewTask()">
-                <img src="img/pencil-square.svg">
-            </button>
-            <p class="task-description">This is the desription for the task</p>
-        </div>
+
     </div>
-    <div class="column dropzone">
-        <h2>Column 2</h2>
+    <div class="column dropzone" id="doing">
+        <h2>Doing</h2>
         <div class="new-card">
             <button class="new-card-button" onclick="openCreateNewTask()"></button>
         </div>
-        <div class="card">
-            <div class="handle" draggable="true"></div>
-            <div class="content">
-                <h5>Task 1 with some text for testing</h5>
-                <p>Simon</p>
-                <p>22.09.2020</p>
-            </div>
-            <button class="edit" onclick="openEditNewTask()">
-                <img src="img/pencil-square.svg">
-            </button>
-            <p class="task-description">Whoever reads this is dumb!</p>
-        </div>
     </div>
-    <div class="column dropzone">
-        <h2>Column 3</h2>
+    <div class="column dropzone" id="done">
+        <h2>DONE</h2>
         <div class="new-card">
             <button class="new-card-button" onclick="openCreateNewTask()"></button>
         </div>
-        <div class="card">
-            <div class="handle" draggable="true"></div>
-            <div class="content">
-                <h5>Another task for testing</h5>
-                <p>Jan</p>
-                <p>30.09.2020</p>
-            </div>
-            <button class="edit" onclick="openEditNewTask()">
-                <img src="img/pencil-square.svg">
-            </button>
-            <p class="task-description">You just got trolled</p>
-        </div>
-    </div>
-    <div class="column new-column">
-        <h2><input class="new-column-input" type="text" placeholder="New task column"></h2>
     </div>
 
 </section>
@@ -110,7 +72,8 @@
             <input type="text" id="nameInput" class="nameInput" name="taskname" placeholder="Enter name here..">
 
             <label for="descInput">Task description:</label>
-            <input type="text" id="descInput" class="descInput" name="decription" placeholder="Enter discription here..">
+            <input type="text" id="descInput" class="descInput" name="decription"
+                   placeholder="Enter discription here..">
 
             <label for="editorInput">Editor:</label>
             <input type="text" id="editorInput" class="editorInput" name="editorname" placeholder="Enter editor here..">
@@ -141,10 +104,12 @@
             <input type="text" id="nameChange" class="nameInput" name="taskname" placeholder="Enter name here..">
 
             <label for="descChange">Task description:</label>
-            <input type="text" id="descChange" class="descInput" name="description" placeholder="Enter discription here..">
+            <input type="text" id="descChange" class="descInput" name="description"
+                   placeholder="Enter discription here..">
 
             <label for="editorChange">Editor:</label>
-            <input type="text" id="editorChange" class="editorInput" name="editorname" placeholder="Enter editor here..">
+            <input type="text" id="editorChange" class="editorInput" name="editorname"
+                   placeholder="Enter editor here..">
 
             <label for="dateChange">Due date:</label>
             <input type="date" id="dateChange" class="dateInput" name="duedate" placeholder="Enter editor here..">
