KanBanane implemented, Registration/ Login updated

--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
 
 <section id="home">
     <hr>
-    <h1>Kanban Board</h1>
+    <h1>KanBanane Board</h1>
     <h2>Organize Your Projects</h2>
     <a href="#login">
         <img src="img/pfeil.png" alt="Pfeil">
@@ -44,12 +44,12 @@
 <!-- LOGIN --------------------------------->
 
 <section id="login">
-    <h3>Login</h3>
+    <h3>Log into Project</h3>
     <hr>
     <form id="loginForm">
 
-        <input class="input_text" type="text" tabindex="1" placeholder="Benutzername"><br>
-        <input class="input_text" type="password" tabindex="2" placeholder="Passwort"><br>
+        <input class="input_text" type="text" tabindex="1" placeholder="projectname"><br>
+        <input class="input_text" type="password" tabindex="2" placeholder="password"><br>
         <input class="button" type="submit" tabindex="3"><br>
         <a href=kanban.html>
             <img src="img/pfeil.png" alt="Pfeil">
@@ -61,11 +61,11 @@
 <!-- Registrieren --------------------------------->
 
 <section id="registration">
-    <h3>Registration</h3>
+    <h3>Register new project</h3>
     <hr>
     <form id="registrationForm">
 
-        <input class="input_text" type="text" name="username" tabindex="4" placeholder="username"><br>
+        <input class="input_text" type="text" name="username" tabindex="4" placeholder="projectname"><br>
         <input class="input_text" type="password" name="password" tabindex="5" placeholder="password"><br>
         <input class="input_text" type="password" tabindex="6" placeholder="repeat password"><br>
         <input class="button" type="submit" tabindex="7"><br>
