--- a/html/index.html
+++ b/html/index.html
@@ -47,8 +47,8 @@
     <h3>Log into Project</h3>
     <hr>
     <form id="loginForm">
-        <input class="input_text" name="username" type="text" tabindex="1" placeholder="Benutzername"><br>
-        <input class="input_text" name="password" type="password" tabindex="2" placeholder="Passwort"><br>
+        <input class="input_text" name="username" type="text" tabindex="1" placeholder="projectname"><br>
+        <input class="input_text" name="password" type="password" tabindex="2" placeholder="password"><br>
         <input class="button" type="submit" tabindex="3"><br>
         <a href=kanban.html>
             <img src="img/pfeil.png" alt="Pfeil">
