--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
     <h3>Log into Project</h3>
     <hr>
     <form id="loginForm">
-        <input class="input_text" name="username" type="text" tabindex="1" placeholder="projectname"><br>
+        <input class="input_text" name="projectname" type="text" tabindex="1" placeholder="projectname"><br>
         <input class="input_text" name="password" type="password" tabindex="2" placeholder="password"><br>
         <input class="button" type="submit" tabindex="3"><br>
         <a href=kanban.html>
@@ -64,7 +64,7 @@
     <hr>
     <form id="registrationForm">
 
-        <input class="input_text" type="text" name="username" tabindex="4" placeholder="projectname"><br>
+        <input class="input_text" type="text" name="projectname" tabindex="4" placeholder="projectname"><br>
         <input class="input_text" type="password" name="password" tabindex="5" placeholder="password"><br>
         <input class="input_text" type="password" tabindex="6" placeholder="repeat password"><br>
         <input class="button" type="submit" tabindex="7"><br>
