Fixed a bug where after dragging a card the header would be placed below the task card

--- a/html/kanban.html
+++ b/html/kanban.html
@@ -50,17 +50,19 @@
                 <p>Add a new task</p>
             </button>
         </div>
-
     </div>
+
     <div class="column dropzone" id="doing">
         <h2>Doing</h2>
     </div>
+
     <div class="column dropzone" id="done">
         <h2>DONE</h2>
     </div>
 
 </section>
 
+<!-- Create a new task form ---------------------->
 <div class="new-task-popup" id="newCardForm">
     <div class="popup-format">
         <h3>Create a new Task</h3>
@@ -93,6 +95,7 @@
     </div>
 </div>
 
+<!-- Edit task card form ----------------------------->
 <div class="new-task-popup" id="editCardForm">
     <div class="popup-format">
         <h3>Edit task</h3>
