--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
 
         <input class="input_text" type="text" name="projectname" tabindex="4" placeholder="projectname"><br>
         <input class="input_text" type="password" name="password" tabindex="5" placeholder="password"><br>
-        <input class="input_text" type="password"  name="password-repeat" tabindex="6" placeholder="repeat password"><br>
+        <input class="input_text" type="password" name="passwordrepeat" tabindex="6" placeholder="repeat password"><br>
         <input class="button" type="submit" tabindex="7"><br>
         <a href="#login">
             <img src="img/pfeil.png" alt="Pfeil">
