--- a/html/kanban.html
+++ b/html/kanban.html
@@ -18,7 +18,7 @@
 <header>
     <div id="logo">
         <a href="#home">
-            <h1>Banane</h1>
+            <h1 id="project-name">Banane</h1>
         </a>
     </div>
 
