--- a/html/kanban.html
+++ b/html/kanban.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
-<body>
+<body onload="initialize()">
 
 <!-- HEADER --------------------------------->
 
