Added Favicon link href blabla

--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,10 @@
 <!-- HEADER --------------------------------->
 
 <header>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
     <div id="logo">
         <a href="#home">
-            <h1>Banane</h1>
+            <h1>KanBanane</h1>
         </a>
     </div>
 
