--- a/html/kanban.html
+++ b/html/kanban.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banane | KanbanBoard</title>
-
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/kanban.css">
