--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,7 @@
     <h3>Contact</h3>
     <hr>
 
-    <form>
+    <form id = "contactForm">
         <input class="input_text" type="email" tabindex="8" placeholder="e-mail"><br>
         <input class="input_text" type="text" tabindex="9" placeholder="subject"><br>
         <textarea class="input_text" tabindex="10" placeholder="message"></textarea><br>
