finalize contact form

--- a/html/index.html
+++ b/html/index.html
@@ -102,8 +102,8 @@
     <hr>
 
     <form id = "contactForm">
-        <input class="input_text" type="text" tabindex="9" placeholder="subject"><br>
-        <textarea class="input_text" tabindex="10" placeholder="message"></textarea><br>
+        <input class="input_text" type="text" tabindex="9" id="subject" placeholder="subject"><br>
+        <textarea class="input_text" tabindex="10" id="message" placeholder="message"></textarea><br>
         <input class="button" type="submit" tabindex="11">
     </form>
 </section>
