href to team from registration

--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
         <input class="input_text" name="projectname" type="text" tabindex="1" placeholder="projectname"><br>
         <input class="input_text" name="password" type="password" tabindex="2" placeholder="password"><br>
         <input class="button" type="submit" tabindex="3"><br>
-        <a href=kanban.html>
+        <a href=#registration>
             <img src="img/pfeil.png" alt="Pfeil">
         </a>
     </form>
@@ -69,7 +69,7 @@
         <input class="input_text" type="password" name="password" tabindex="5" placeholder="password"><br>
         <input class="input_text" type="password" name="passwordrepeat" tabindex="6" placeholder="repeat password"><br>
         <input class="button" type="submit" tabindex="7"><br>
-        <a href="#login">
+        <a href="#team">
             <img src="img/pfeil.png" alt="Pfeil">
         </a>
     </form>
