--- a/html/index.html
+++ b/html/index.html
@@ -82,13 +82,13 @@
     <h3>Our Team</h3>
     <hr>
     <ul>
-        <li><a href=https://github.com/Yonkske><img src="img/albrecht.PNG" alt="Albrecht"></a></li>
+        <li><a href=https://github.com/Yonkske><img src="img/albrecht.PNG" id="albrecht" alt="Albrecht"></a></li>
         <br><br>
         <h2>Jan Albrecht, W&W Informatik GmbH</h2><br><br>
-        <li><a href=https://github.com/doenisf><img src="img/froehner.PNG" alt="Froehner"></a></li>
+        <li><a href=https://github.com/doenisf><img src="img/froehner.PNG" id="froeni" alt="Froehner"></a></li>
         <br><br>
         <h2>Simon Fröhner, Finanz Informatik Solutions Plus GmbH</h2><br><br>
-        <li><a href=https://github.com/tabascoel><img src="img/tabyrca.PNG" alt="Tabyrca"></a></li>
+        <li><a href=https://github.com/tabascoel><img src="img/tabyrca.PNG" id="tabaluga" alt="Tabyrca"></a></li>
         <h2>Ion Tabyrca, Sopra Banking Software GmbH</h2><br><br>
     </ul>
     <hr>
@@ -112,9 +112,12 @@
 <!-- FOOTER --------------------------------->
 
 <footer>
+
     <p>
+        <img src="img/favicon.ico" id="easteregg" width="15" height="15" onclick="easteregg()">
         &copy; 2020 DHBW Stuttgart
     </p>
+
 </footer>
 <!----- Adding the necessary scripts ----->
 <script src="js/index.js"></script>
