--- a/html/kanban.html
+++ b/html/kanban.html
@@ -34,7 +34,7 @@
                 </div>
             </a>
             </li>
-            <li><a href="index.html">Logout</a></li>
+            <li><a href="index.html" onclick="logout()">Logout</a></li>
         </ul>
     </nav>
 </header>
