--- a/html/index.html
+++ b/html/index.html
@@ -82,13 +82,13 @@
     <h3>Our Team</h3>
     <hr>
     <ul>
-        <li><a href=https://github.com/Yonkske><img src="img/albrecht.PNG" id="albrecht" alt="Albrecht"></a></li>
+        <li><a href=https://github.com/Yonkske><img src="img/albrecht.png" id="albrecht" alt="Albrecht"></a></li>
         <br><br>
         <h2>Jan Albrecht, W&W Informatik GmbH</h2><br><br>
-        <li><a href=https://github.com/doenisf><img src="img/froehner.PNG" id="froeni" alt="Froehner"></a></li>
+        <li><a href=https://github.com/doenisf><img src="img/froehner.png" id="froeni" alt="Froehner"></a></li>
         <br><br>
         <h2>Simon Fröhner, Finanz Informatik Solutions Plus GmbH</h2><br><br>
-        <li><a href=https://github.com/tabascoel><img src="img/tabyrca.PNG" id="tabaluga" alt="Tabyrca"></a></li>
+        <li><a href=https://github.com/tabascoel><img src="img/tabyrca.png" id="tabaluga" alt="Tabyrca"></a></li>
         <h2>Ion Tabyrca, Sopra Banking Software GmbH</h2><br><br>
     </ul>
     <hr>
