remove home and your projects from navigation, added footer on kanban

--- a/html/kanban.html
+++ b/html/kanban.html
@@ -24,16 +24,6 @@
 
     <nav id="main-nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="dropdown">
-                <span>Your projects</span>
-                <div class="dropdown-content">
-                    <p href="project1">Project 1</p>
-                    <p href="project2">Project 2</p>
-                    <p href="project3">Project 3</p>
-                </div>
-            </a>
-            </li>
             <li><a href="index.html" onclick="logout()">Logout</a></li>
         </ul>
     </nav>
@@ -120,6 +110,16 @@
         </form>
     </div>
 </div>
+
+
+<footer>
+
+    <p>
+        <img src="img/favicon.ico" id="easteregg" width="15" height="15" onclick="easteregg()">
+        &copy; 2020 DHBW Stuttgart
+    </p>
+
+</footer>
 
 <!----- Adding the necessary scripts ----->
 <script src="js/kanban.js"></script>
